    + Updated MONO_API to 1.2.6
    + Enabled moonlight support in configure call.
    + Removed all "rm debian/tmp/usr/lib/mono/gac/"... calls, instead list
      libraries explicitly in .install files.
      (this is pretty error prone when upstream introduces new libraries and
       the rm list became way too long)
    + Copy various 1.0 manpages to 2.0 manpages for missing 2.0 manpages.
  * debian/control:
    + Added new packages (mono-mcs/gmcs needed to be split as some parts of the
      runtime relies on the compiler, like the XmlSerializer class):
      - mono-mcs was split to: mono-1.0-devel and mono-1.0-service.
        (monolinker.exe is now shipped part of mono-1.0-devel, Closes: #443833)
      - mono-gmcs was split to: mono-2.0-devel, mono-2.0-service and
        mono-xbuild.
      - mono-smcs, containing the new compiler for moonlight/silverlight
        applications.
      - libmono-corlib2.1-cil and libmono-system2.1-cil, containing the
        moonlight/silverlight runtime libraries.
      - libmono-db2-1.0-cil, containing IBM DB2 database connector.
      - libmono-mozilla0.1-cil, containing the WebControl implementation using
        the Mozilla engine.
      - libmono-i18n1.0-cil and libmono-i18n2.0-cil, containing I18N libraries
        with code page definitions, moved from libmono-corlib{1,2}.0-cil.
      - prj2make-sharp, upstream moved distribution of prj2make-sharp to Mono.
    + libmono-corlib{1,2}.0-cil recommends libmono-i18n{1,2}.0-cil now.
    + Removed mono and mono-devel meta packages, as they are not useful for
      anyone.
  * debian/dh_clideps:
    + Synced from cli-common 0.5.3, needed for CLI 2.1 support.
  * debian/patches/00list:
    + Disabled armel_fix_configure_fpu_check.dpatch
      (FPU check is fixed upstream)
  * debian/patches/kfreebsd_support.dpatch:
    + Updated (and re-autoconfed)
  * debian/patches/fix-mono.pc.in.dpatch:
    + Updated
  * debian/patches/ppc_fix_mono_class_proxy_vtable_r84948.dpatch: