@@ -11,8 +11,8 @@ debian/tmp/usr/share/man/man1/ilasm.1
 debian/tmp/usr/share/man/man1/macpack.1
 debian/tmp/usr/share/man/man1/makecert.1
 debian/tmp/usr/share/man/man1/mkbundle.1
-debian/tmp/usr/share/man/man1/mono-service.1
 debian/tmp/usr/share/man/man1/mono-shlib-cop.1
+debian/tmp/usr/share/man/man1/mono-xmltool.1
 debian/tmp/usr/share/man/man1/monolinker.1
 debian/tmp/usr/share/man/man1/monop.1
 debian/tmp/usr/share/man/man1/mozroots.1
