@@ -1,5 +1,8 @@
+debian/tmp/usr/share/man/man1/al2.1
 debian/tmp/usr/share/man/man1/wsdl2.1
 debian/tmp/usr/share/man/man1/monop2.1
+debian/tmp/usr/share/man/man1/mkbundle2.1
 debian/tmp/usr/share/man/man1/ilasm2.1
 debian/tmp/usr/share/man/man1/resgen2.1
+debian/tmp/usr/share/man/man1/sgen.1
 debian/tmp/usr/share/man/man1/httpcfg.1
