@@ -6,7 +6,7 @@ export MONO_SHARED_DIR=$(CURDIR)
 MONO_API = 1.2.6
 
 VERSION = $(shell dpkg-parsechangelog | grep ^Vers | cut -d\  -f2)
-UPVERSION = $(shell echo $(VERSION) | sed 's,-.*,,')
+UPVERSION = $(shell echo $(VERSION) | sed 's,-.*,,' | sed 's,+.*,,') 
 NEXT_UPVERSION = $(shell perl -e '$$_=pop; s/(\d+)$$/$$1+1/e; print' $(UPVERSION))
 
 RUN_MONO = LD_LIBRARY_PATH=debian/tmp/usr/lib MONO_PATH=debian/tmp/usr/lib/mono/1.0:debian/tmp/usr/lib/mono/2.0 debian/tmp/usr/bin/mono
@@ -140,12 +140,16 @@ install-indep-stamp:
 	  $(MAKE) install DESTDIR=$(CURDIR)/debian/tmp PROFILE=net_2_0
 	  $(MAKE) install DESTDIR=$(CURDIR)/debian/tmp PROFILE=net_2_1
 	# copy missing 2.0 manpage
+	cp $(CURDIR)/debian/tmp/usr/share/man/man1/al.1 \
+	   $(CURDIR)/debian/tmp/usr/share/man/man1/al2.1
 	cp $(CURDIR)/debian/tmp/usr/share/man/man1/mcs.1 \
 	   $(CURDIR)/debian/tmp/usr/share/man/man1/gmcs.1
 	cp $(CURDIR)/debian/tmp/usr/share/man/man1/mcs.1 \
 	   $(CURDIR)/debian/tmp/usr/share/man/man1/smcs.1
 	cp $(CURDIR)/debian/tmp/usr/share/man/man1/mono-service.1 \
 	   $(CURDIR)/debian/tmp/usr/share/man/man1/mono-service2.1
+	cp $(CURDIR)/debian/tmp/usr/share/man/man1/mkbundle.1 \
+	   $(CURDIR)/debian/tmp/usr/share/man/man1/mkbundle2.1
 	cp $(CURDIR)/debian/tmp/usr/share/man/man1/wsdl.1 \
 	   $(CURDIR)/debian/tmp/usr/share/man/man1/wsdl2.1
 	cp $(CURDIR)/debian/tmp/usr/share/man/man1/monop.1 \
